Spin cube on its corner

--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
   <title>CARNUN.COM</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="style.css">
+  <script src="https://webgl2fundamentals.org/webgl/resources/webgl-utils.js"></script>
+  <script src="https://webgl2fundamentals.org/webgl/resources/m4.js"></script>
   <script defer src="ice.js"></script>
   <body>
+    <h1>CARNUN.COM</h1>
+    <p>Looking for this?</p>
     <!-- h/w here are just initial values; the canvas is resized in CSS -->
     <canvas id="c" width="500" height="500"></canvas>
+    <p>Well, it's on ice.</p>
   </body>
 </html>
