Texture cube; Zoom; Resizing

--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
   <script src="https://webgl2fundamentals.org/webgl/resources/webgl-utils.js"></script>
   <script src="https://webgl2fundamentals.org/webgl/resources/m4.js"></script>
   <script defer src="ice.js"></script>
+  <script defer>
+    const canvas = document.querySelector("#c");
+    console.log(canvas);
+  </script>
   <body>
-    <h1>CARNUN.COM</h1>
+    <h1 class="title">CARNUN.COM</h1>
     <p>Looking for this?</p>
     <!-- h/w here are just initial values; the canvas is resized in CSS -->
-    <canvas id="c" width="500" height="500"></canvas>
-    <p>Well, it's on ice.</p>
+    <canvas id="c" width="600" height="600"></canvas>
+    <p>Well, it's on ice. In the meantime you can find me on the birdsite.</p>
   </body>
 </html>
