Tweaks: rotation, styling, copy...

--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
     console.log(canvas);
   </script>
   <body>
-    <h1 class="title">CARNUN.COM</h1>
-    <p>Looking for this?</p>
-    <!-- h/w here are just initial values; the canvas is resized in CSS -->
-    <canvas id="c" width="600" height="600"></canvas>
-    <p>Well, it's on ice. In the meantime you can find me on the birdsite.</p>
+    <span>Looking for this?</span>
+    <!-- height & width here are just initial values; the canvas is resized in CSS -->
+    <canvas id="c" width="500" height="500"></canvas>
+    <span>Well, it's on ice. Peep <a href="https://twitter.com/CarnunMP">the site formerly known as bird</a> for what comes next.</span>
   </body>
 </html>
