Polish: styling (including resizing), email, copy...

--- a/index.html
+++ b/index.html
@@ -7,14 +7,23 @@
   <script src="https://webgl2fundamentals.org/webgl/resources/webgl-utils.js"></script>
   <script src="https://webgl2fundamentals.org/webgl/resources/m4.js"></script>
   <script defer src="ice.js"></script>
-  <script defer>
-    const canvas = document.querySelector("#c");
-    console.log(canvas);
-  </script>
+  <script defer src="foobarbaz.js"></script>
   <body>
-    <span>Looking for this?</span>
-    <!-- height & width here are just initial values; the canvas is resized in CSS -->
-    <canvas id="c" width="500" height="500"></canvas>
-    <span>Well, it's on ice. Peep <a href="https://twitter.com/CarnunMP">the site formerly known as bird</a> for what comes next.</span>
+    <div class="page">
+      <h2>Looking for this?</h2>
+      <!-- height & width here are just initial values; the canvas is resized in CSS & JS -->
+      <canvas id="c" width="500" height="500"></canvas>
+      <h2>Well, it's on ice.</h2>
+      </br>
+      </br>
+      </br>
+      </br>
+      </br>
+      </br>
+      <span>Peep <a href="https://twitter.com/CarnunMP">the <i>site</i> FKA <i>bird</i></a> for what comes next.</span>
+      </br>
+      </br>
+      <a id="baz" href="#"><img src="baz.png"></a>
+    </div>
   </body>
 </html>
