Replace letter icon with CMP

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <span>Peep <a href="https://twitter.com/CarnunMP">the <i>site</i> FKA <i>bird</i></a> for what comes next.</span>
       </br>
       </br>
-      <a id="baz" href="#"><img src="baz.png"></a>
+      <a id="baz" href="#"><img src="cmp2.png"></a>
     </div>
   </body>
 </html>
