Add favicon; Fix Firefox margins

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <meta charset="UTF-8">
   <title>CARNUN.COM</title>
+  <link rel="icon" type="image/x-icon" href="cmp2.ico">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="style.css">
   <script src="https://webgl2fundamentals.org/webgl/resources/webgl-utils.js"></script>
@@ -14,15 +15,7 @@
       <!-- height & width here are just initial values; the canvas is resized in CSS & JS -->
       <canvas id="c" width="500" height="500"></canvas>
       <h2>Well, it's on ice.</h2>
-      </br>
-      </br>
-      </br>
-      </br>
-      </br>
-      </br>
       <span>Peep <a href="https://twitter.com/CarnunMP">the <i>site</i> FKA <i>bird</i></a> for what comes next.</span>
-      </br>
-      </br>
       <a id="baz" href="#"><img src="cmp2.png"></a>
     </div>
   </body>
