Update Tw**ter link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <!-- height & width here are just initial values; the canvas is resized in CSS & JS -->
       <canvas id="c" width="500" height="500"></canvas>
       <h2>Well, it's on ice.</h2>
-      <span>Peep <a href="https://twitter.com/CarnunMP">the <i>site</i> FKA <i>bird</i></a> for what comes next.</span>
+      <span>Peep <a href="https://x.com/carnundotcom">the <i>site</i> FKA <i>bird</i></a> for what comes next.</span>
       <a id="baz" href="#"><img src="cmp2.png"></a>
     </div>
   </body>
